--- a/docs/style.css
+++ b/docs/style.css
@@ -1,5 +1,47 @@
+.graph {
+  width: 70%;
+}
+
+.survey {
+  width: 30%;
+}
+
 #container {
-    max-width: 100%;
-    height: 98vh;
-    margin: auto;
+  max-width: 100%;
+  height: 98vh;
+  margin: auto;
+}
+
+#legend {
+  position: absolute;
+  top: 0px;
+  left: 16px;
+  background: #000000bf;
+  border-radius: 6px;
+  border-style: solid;
+  padding: 6px;
+  color: white;
+}
+
+#legend h3 {
+  margin-top: 2px;
+  margin-bottom: 2px;
+  text-align: center;
+}
+
+#legend p {
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+.red-dot {
+  font-size: xx-large;
+  color: red;
+  margin: 6px;
+}
+
+.black-dot {
+  font-size: xx-large;
+  color: black;
+  margin: 6px;
 }
