--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -17,7 +17,6 @@
     border: none;
   }
 }
-
 #container {
   max-width: 100%;
   height: 98vh;
@@ -40,13 +39,11 @@
   padding: 6px;
   color: white;
 }
-
 #legend h3 {
   margin-top: 2px;
   margin-bottom: 2px;
   text-align: center;
 }
-
 #legend p {
   margin-top: 2px;
   margin-bottom: 2px;
@@ -62,4 +59,29 @@
   font-size: xx-large;
   color: black;
   margin: 6px;
+}
+
+#feedback {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+#feedback button {
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+#feedback button.blue {
+  background-color: #008cba;
+  display: block;
+}
+#feedback button.red {
+  background-color: red;
+  display: none;
 }
