--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,19 +1,24 @@
-@media screen and (min-width: 768px) {
-  #frame {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    column-gap: 2px;
+@media screen and (min-width: 1024px) {
+  #container.survey_open {
+    width: 65%;
+    float: left;
   }
-
-  #container {
-    max-width: 100%;
-    height: 70vh;
-    margin: auto;
-  }
-
-  .survey iframe {
+  #container.survey_close {
     width: 100%;
-    height: 28vh;
+    float: left;
+  }
+
+  #survey.survey_open {
+    width: 35%;
+    float: right;
+    display: block;
+  }
+  #survey.survey_close {
+    display: none;
+  }
+  #survey iframe {
+    width: 100%;
+    height: 98vh;
     border: none;
   }
 }
@@ -65,6 +70,18 @@
   position: absolute;
   top: 0px;
   right: 0px;
+}
+#feedback.survey_close button.blue {
+  display: block;
+}
+#feedback.survey_close button.red {
+  display: none;
+}
+#feedback.survey_open button.blue {
+  display: none;
+}
+#feedback.survey_open button.red {
+  display: block;
 }
 #feedback button {
   border: none;
