--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 @media screen and (min-width: 1024px) {
   #container.survey_open {
     width: 65%;
@@ -28,7 +32,10 @@
   margin: auto;
 }
 
-.survey iframe {
+#survey {
+  width: 100%;
+}
+#survey iframe {
   width: 100%;
   height: 98vh;
   border: none;
