--- a/docs/secos/iot/apache/styles/style.scss
+++ b/docs/secos/iot/apache/styles/style.scss
@@ -63,6 +63,11 @@ html {
         margin-top: 2px;
         margin-bottom: 2px;
     }
+    .navigation-icon {
+        img {
+            width: 32px;
+        }
+    }
 }
 
 .blue-dot {
