--- a/docs/secos/iot/eclipse/styles/style.css
+++ b/docs/secos/iot/eclipse/styles/style.css
@@ -11,6 +11,7 @@ html {
     width: 100%;
     float: left;
   }
+
   #survey.survey_open {
     width: 35%;
     float: right;
@@ -25,7 +26,6 @@ html {
     border: none;
   }
 }
-
 #container {
   max-width: 100%;
   height: 98vh;
@@ -35,7 +35,6 @@ html {
 #survey {
   width: 100%;
 }
-
 #survey iframe {
   width: 100%;
   height: 98vh;
@@ -44,7 +43,7 @@ html {
 
 #legend {
   position: absolute;
-  top: 0px;
+  bottom: 0px;
   left: 0px;
   background: #000000bf;
   border-radius: 6px;
@@ -52,16 +51,17 @@ html {
   padding: 6px;
   color: white;
 }
-
 #legend h3 {
   margin-top: 2px;
   margin-bottom: 2px;
   text-align: center;
 }
-
 #legend p {
   margin-top: 2px;
   margin-bottom: 2px;
+}
+#legend .navigation-icon img {
+  width: 32px;
 }
 
 .blue-dot {
@@ -81,23 +81,18 @@ html {
   top: 0px;
   right: 0px;
 }
-
 #feedback.survey_close button.blue {
   display: block;
 }
-
 #feedback.survey_close button.red {
   display: none;
 }
-
 #feedback.survey_open button.blue {
   display: none;
 }
-
 #feedback.survey_open button.red {
   display: block;
 }
-
 #feedback button {
   border: none;
   color: white;
@@ -109,14 +104,11 @@ html {
   margin: 4px 2px;
   cursor: pointer;
 }
-
 #feedback button.blue {
   background-color: #008cba;
   display: block;
 }
-
 #feedback button.red {
   background-color: red;
   display: none;
 }
-/*# sourceMappingURL=style.css.map */
