--- a/docs/secos/iot/eclipse/styles/style.scss
+++ b/docs/secos/iot/eclipse/styles/style.scss
@@ -47,7 +47,7 @@ html {
 
 #legend {
     position: absolute;
-    top: 0px;
+    bottom: 0px;
     left: 0px;
     background: #000000bf;
     border-radius: 6px;
@@ -62,6 +62,11 @@ html {
     p {
         margin-top: 2px;
         margin-bottom: 2px;
+    }
+    .navigation-icon {
+        img {
+            width: 32px;
+        }
     }
 }
 
