--- a/docs/secos/iot/apache/styles/style.scss
+++ b/docs/secos/iot/apache/styles/style.scss
@@ -88,6 +88,7 @@ html {
         position: absolute;
         right: 6px;
     }
+    #selected-wordcloud-2,
     #selected-wordcloud {
         width: 100%;
     }
